tests/baselines/reference/declarationFileNoCrashOnExtraExportModifier.errors.txt
tests/cases/compiler/input.ts(1,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
tests/cases/compiler/input.ts(6,14): error TS2300: Duplicate identifier 'Sub'.
tests/cases/compiler/input.ts(12,14): error TS2300: Duplicate identifier 'Sub'.


==== tests/cases/compiler/input.ts (3 errors) ====
    export = exports;
    ~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    declare class exports {
        constructor(p: number);
        t: number;
    }
    export class Sub {
                 ~~~
!!! error TS2300: Duplicate identifier 'Sub'.
!!! related TS6203 tests/cases/compiler/input.ts:12:14: 'Sub' was also declared here.
        instance!: {
            t: number;
        };
    }
    declare namespace exports {
        export { Sub };
                 ~~~
!!! error TS2300: Duplicate identifier 'Sub'.
!!! related TS6203 tests/cases/compiler/input.ts:6:14: 'Sub' was also declared here.
    }